--- a/css/download.css
+++ b/css/download.css
@@ -38,3 +38,17 @@ body
 	margin: 10px 0;
 	font-size: 20px;
 }
+footer
+{
+	height: 50px;
+	background-color: #222;
+}
+footer .container p
+{
+	color: #fff;
+	line-height: 50px;
+	height: 50px;
+	margin-bottom: 0;
+	text-align: center;
+	font-size: 16px;
+}
