--- a/css/index.css
+++ b/css/index.css
@@ -49,6 +49,7 @@ border-bottom: 1px solid #ccc;
 	text-align: center;
   padding-top: 100px;
   margin-bottom: 100px;
+  padding-left: 100px;
 	 -webkit-transition: all 0.3s ease;
   -moz-transition: all 0.3s ease;
   -ms-transition: all 0.3s ease;
@@ -76,15 +77,37 @@ border-bottom: 1px solid #ccc;
 .index-footer{
 
   height: 200px;
+  padding-top: 160px;
   text-align: center;
 
 }
 .index-footer p{
 
-  position: relative;
-  top: 140px;
   color: #777;
+  padding:0 400px 0 400px;
+}
+
+.index-footer a{
+  text-decoration: none;
+  padding-left:2px;
 }
 .index-footer a:hover{
-  color: #f00;
+  color: #ccc;
+  text-align: center;
+}
+
+
+.index-footer img{
+  width: 30px;
+  height: 30px;
+}
+.index-footer img:hover{
+ opacity: 0.5;
+}
+.github-span{
+  margin-left: 15px;
+  margin-right: 15px;
+}
+.index-footer .author{
+  font-size: 10px;
 }
