--- a/css/login2.css
+++ b/css/login2.css
@@ -1,3 +1,9 @@
+*
+{
+	margin: 0;
+	padding: 0;
+
+}
 html {
 	
 }
@@ -5,7 +11,8 @@ body {
 	font-family:"Microsoft Yahei";
 	font-size:12px;
 	margin:0;
-background: #fff url(../images/2.jpg) 50% 0 no-repeat;}
+    background: #fff url(../images/register.jpg) 50% 0 no-repeat;
+    background-size: cover;}
 ul {
 	padding:0;
 	margin:0;
