--- a/css/waterfall.css
+++ b/css/waterfall.css
@@ -1,6 +1,11 @@
+*
+{
+	margin: 0;
+	padding: 0;
+}
 .main{
     -webkit-column-width:225px;
-    -moz-column-width:160px; 
+    -moz-column-width:225px; 
 	-webkit-column-gap:3px;
 	-moz-column-gap:3px;
 }
@@ -8,15 +13,32 @@
 
 /*数据块 砖块*/
 
-.main .box{width:200px;
+.main .box{width:205px;
            margin:10px 0;
+           border-radius: 10px;
            border:1px solid #ccc;
-           box-shadow:0 0 5px #ccc; 
+           box-shadow:0 0 10px #ccc; 
+           cursor: pointer;
            }
 body
 {
 	padding-top: 70px;
-}            
+	background-color: #ededea;
+}   
+
+.navbar
+{
+	background: url(../images/artical_03.png) no-repeat 250px 10px;
+	background-color: #0099ff;
+}
+.navbar .container
+{
+	height: 50px;
+}  
+#bs-example-navbar-collapse-1  
+{
+	height: 50px;
+}  
 footer
 {
 	height: 50px;
@@ -32,9 +54,97 @@ footer .container p
 	text-align: center;
 	font-size: 16px;
 }
-.box p
+.box
 {
-	text-align: center;
-	padding: 5px;
+	background-color: #fff;
 }
-           
+.box p 
+{
+	margin: 8px 10px;
+}
+
+.modal-body img {
+	width: 564px;
+	/*height: auto;*/
+}
+
+.sidebar
+{
+	width: 50px;
+
+}
+.sidebar {
+
+	list-style:none;
+	position: fixed;
+	width: 54px;
+	right: 80px;
+	bottom: 70px;	
+	border-radius: 5px;
+	border: 1px solid #ccc;
+	overflow: hidden;
+}
+.sidebar  li{    
+	position: relative;
+	width: 48px;
+	height: 48px;
+	margin-top:3px;
+	cursor: pointer;
+	overflow: hidden;
+
+}
+
+.sidebar .li2{
+	background: url(../images/sprite.png) 0  0px;
+
+}
+.sidebar .li3{
+	background: url(../images/sprite.png) 0 -51px;
+}
+
+.sidebar .li4{
+	background: url(../images/sprite.png) 0 -102px;
+}
+
+.sidebar .li5{
+	background: url(../images/sprite.png) 0 -153px;
+}
+
+.sidebar .li6{
+	background: url(../images/sprite.png) 0 -204px;
+}
+
+.sidebar .li7{
+	background: url(../images/sprite.png) 0 -255px;
+}
+
+.sidebar a{
+	content: attr(data-text);
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	line-height: 48px;
+	font-size: 12px;
+	font-weight: 700;
+	color: #fff!important;
+	border-radius: 3px;
+	background-color: #ccc;
+	text-decoration: none!important;
+	text-align: center;
+	-webkit-transform-origin: -50% 50%;
+	transform-origin: -50% 50%;
+	-webkit-transform: rotate3d(0,0,1,90deg);
+	transform: rotate3d(0,0,1,90deg);
+	-webkit-transition: -webkit-transform .3s ease-in;
+	transition: transform .3s ease-in;
+	opacity: 0\9;
+	filter: alpha(opacity=0)\9;
+}
+.sidebar li:hover a{
+	-webkit-transform: rotate3d(0,0,1,0deg);
+	transform: rotate3d(0,0,1,0deg);
+	-webkit-transition-timing-function: ease-out;
+	transition-timing-function: ease-out;
+}
