--- a/css/download.css
+++ b/css/download.css
@@ -1,54 +1,190 @@
-*
-{
-	padding: 0;
-	margin: 0;
-}
+
 body
 {
 	padding-top: 50px;
-	background-color: #ededda;
+	background-color: #fff;
+	font-family: "Microsoft YaHei";
 }
-
+*{
+	margin: 0;
+	padding: 0;
+}
+.navbar
+{
+	background: url(../images/artical_03.png) no-repeat 250px 10px;
+	background-color: #0099ff;
+}
+ 
 .content h1
 {
-	padding:20px 0;
+	margin-top: 34px;
+	margin-bottom: 40px;
+	font-size: 72px;
+	color: #333;
+	font-family: "SimHei"
+}
+.breadcrumb
+{
+	font-size: 14px;
+	background-color: #fff;
+    color: #000000;
+    margin-bottom: 38px;
+    padding: 0 15px;
 }
 
-.col-md-4 p
+.content-l
+{
+
+	width: 874px;
+}
+.content-l .box
+{
+    margin-bottom: 40px;
+    border-bottom: 3px solid #f0f0f0;
+}
+.download-dec h1
+{
+	font-size: 24px;
+	color: #333;
+	margin-top: 0;
+	margin-bottom: 18px;
+	font-family: "SimHei"
+}
+.dec1
 {
 	line-height: 20px;
-    padding-top: 30px;
+	font-size: 14px;
+	margin-bottom: 16px;
+	color: #333;
 }
-.col-md-8 .box
+.dec2
 {
-	margin: 10px 0;
-	width: 590px;
-	height: 165px;
+	float: left;
+	margin-bottom: 40px;
+	line-height: 20px;
+	color: #333;
 }
-.col-md-8 .box .col-md-10 p
+.dec2 span
 {
-	margin: 10px 0;
+    font-family: "SimHei";
+    color: #000;
 }
-.col-md-8 .box .col-md-2 img
+.download-dec a
 {
-    margin-top: 10px;
-    margin-left: 10px;
+	float: right;
+	margin-right: 30px;
+	display: block;
+	margin-bottom: 40px;
 }
-.col-md-8 .box .col-md-10 p
+.btn-primary
 {
-	margin: 10px 0;
-	font-size: 20px;
+	width: 133px;
+	height: 40px;
+	background-color: #0099ff;
+}
+.content-r
+{
+	margin-left: 100px;
+}
+.content-r .p1 .p2
+{
+	margin-bottom: 40px;
+	color: #000;
+	font-size: 14px;
+	line-height: 20px;
+}
+
+.pagination
+{
+	margin: 0 250px;
+	margin-bottom: 80px;
+}
+
+
+.sidebar {
+    width: 50px;
+	list-style:none;
+	position: fixed;
+	width: 54px;
+	right: 80px;
+	bottom: 70px;	
+	border-radius: 5px;
+	overflow: hidden;
+}
+.sidebar  li{    
+	position: relative;
+	width: 48px;
+	height: 48px;
+	margin-top:3px;
+	cursor: pointer;
+	overflow: hidden;
+
+}
+
+.sidebar .li2{
+	background: url(../images/sprite.png) 0  0px;
+
+}
+.sidebar .li3{
+	background: url(../images/sprite.png) 0 -51px;
+}
+
+.sidebar .li4{
+	background: url(../images/sprite.png) 0 -102px;
+}
+
+.sidebar .li5{
+	background: url(../images/sprite.png) 0 -153px;
+}
+
+.sidebar .li6{
+	background: url(../images/sprite.png) 0 -204px;
+}
+
+.sidebar .li7{
+	background: url(../images/sprite.png) 0 -255px;
+}
+
+.sidebar a{
+	content: attr(data-text);
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	line-height: 48px;
+	font-size: 12px;
+	font-weight: 700;
+	color: #fff!important;
+	border-radius: 3px;
+	background-color: #ccc;
+	text-decoration: none!important;
+	text-align: center;
+	-webkit-transform-origin: -50% 50%;
+	transform-origin: -50% 50%;
+	-webkit-transform: rotate3d(0,0,1,90deg);
+	transform: rotate3d(0,0,1,90deg);
+	-webkit-transition: -webkit-transform .3s ease-in;
+	transition: transform .3s ease-in;
+	opacity: 0\9;
+	filter: alpha(opacity=0)\9;
+}
+.sidebar li:hover a{
+	-webkit-transform: rotate3d(0,0,1,0deg);
+	transform: rotate3d(0,0,1,0deg);
+	-webkit-transition-timing-function: ease-out;
+	transition-timing-function: ease-out;
 }
 footer
 {
-	height: 50px;
+	height: 30px;
 	background-color: #222;
 }
 footer .container p
 {
 	color: #fff;
-	line-height: 50px;
-	height: 50px;
+	line-height: 30px;
+	height: 30px;
 	margin-bottom: 0;
 	text-align: center;
 	font-size: 16px;
