--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,7 @@
+@font-face{
+  font-family:myFont;
+  src:url('../fonts/BRUSHSCRIPTSTD.OTF');
+}
 #index-aside{
 	moz-transform: translateX(0px);
     -webkit-transform: translateX(0px);
@@ -31,8 +35,9 @@
 
 
 }
+
 #describe-1 span{
-      font-family: "brush script std medium";
+      font-family:myFont;
       font-size: 120px;
 }
 #mk{
@@ -58,14 +63,15 @@ border-bottom: 1px solid #ccc;
 .index-intro{
 
 	margin: 0 auto;
-  padding-top: 200px;
-  padding-bottom: 200px;
+  padding-top: 100px;
+  padding-bottom: 100px;
 	/*height: 500px;*/
 	text-align: center;
+  background-color: #ededea;
 }
 
 .btn-outline {
-  margin-top: 100px;
+  margin-top: 20px;
   border: 2px solid #eaeaea !important;
   background: transparent;
   color: #2a2e37;
@@ -84,13 +90,13 @@ border-bottom: 1px solid #ccc;
 /*index-fun*/
 
 .index-func{
- background-color: #f6f9fa;
+ background-color: #ccc;
 
  
 
 }
 .index-head{
-  font-family: "brush script std medium";
+  font-family: 'myFont';
   padding-left: 40px;
   padding-top: 4px;
   font-size: 60px;
@@ -118,7 +124,7 @@ background-color: #666;
    height: auto;
 	text-align: center;
   padding-top: 100px;
-  margin-bottom: 100px;
+  
   padding-left: 100px;
 	 -webkit-transition: all 0.3s ease;
   -moz-transition: all 0.3s ease;
@@ -227,6 +233,13 @@ background-color: #666;
 }
 }
 
+/*lb*/
+.lb,footer{
+  background-color: #333333;
+}
+.lb .index-head{
+  color: #fff;
+}
 .item img{
   width: 100%;
   height:100%;
@@ -234,7 +247,7 @@ background-color: #666;
 }
 .carousel {
   margin:0 auto;
-  width: 500px;
+  width: 700px;
 
  
 }
@@ -290,5 +303,6 @@ font-family: "微软雅黑"
 }
 #navbar-r{
  font-size: 26px;
+ 
 }
 /*轮播图*/
