--- a/css/aside/style.css
+++ b/css/aside/style.css
@@ -252,7 +252,7 @@ header.is-fixed {
 }
 @media only screen and (min-width: 768px) {
   #cd-menu-trigger {
-    width: 110px;
+    width: 50px;
     padding-left: 1.25em;
   }
   #cd-menu-trigger .cd-menu-text {
@@ -356,7 +356,7 @@ header.is-fixed {
   -o-transform: translateY(-50%);
   transform: translateY(-50%);
   right: 1em;
-  background: url("../img/cd-arrow.svg") no-repeat center center;
+  background: url("cd-arrow.svg") no-repeat center center;
   background-size: 8px 11px;
   -webkit-transition-property: -webkit-transform;
   -moz-transition-property: -moz-transform;
@@ -386,7 +386,7 @@ header.is-fixed {
   width: 32px;
   float: left;
   padding: 0;
-  background-image: url("../img/cd-socials.svg");
+  background-image: url("cd-socials.svg");
   background-repeat: no-repeat;
   background-size: 128px 64px;
   background-color: #FFF;
