--- a/css/ask.css
+++ b/css/ask.css
@@ -113,3 +113,69 @@ ul{
 .describe{
 	font-size: 12px;
 }
+/*menu*/
+.cd-menu{
+	position: fixed;
+	bottom: 45px;
+	right:50px;
+	width: 40px;
+    height: 40px;
+    background-color: #ccc;
+    z-index: 199;
+}
+
+/*addQuerstio*/
+.addQuestion{
+      display: block;
+      position: fixed;
+      right: 1%;
+      left: 1%;
+      bottom: 0;
+      margin:0 auto;
+      width:800px;
+      height: 340px;
+      padding: 20px;
+      background-color: rgb(246, 249, 250);
+      border: 1px solid #777;
+      border-radius: 8px;
+      z-index: 1000;
+
+
+}
+.tableBasic{
+	background-color: #f9f9f9;
+	color: #666;
+	border: 1px dotted #ccc;
+	/*border-top: 1px dotted #ccc;*/
+}
+table{
+	display: table;
+	border-collapse: separate;
+	border-spacing: 2px;
+	border-color: grey;
+
+}
+td{
+	font-family: "微软雅黑";
+
+}
+#content{
+	width:576px;
+	height:180px;
+}
+#ask-submit{
+	float: right;
+
+}
+/*.select-cat{
+	width: 100%
+	height:100%
+    margin-left:120px;
+}*/
+.addQuestion button{
+	float: right;
+	margin-top: 10px;
+}
+#ask-btn{
+	margin-bottom: 10px;
+}
