--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,6 @@
+li{
+  list-style: none;
+}
 @font-face{
   font-family:myFont;
   src:url('../fonts/BRUSHSCRIPTSTD.OTF');
@@ -220,6 +223,7 @@ background-color: #666;
   margin-right:100px;
   }
 
+
 .fun-describe{
   font-family: "微软雅黑";
   font-size: 18px;
@@ -305,4 +309,8 @@ font-family: "微软雅黑"
  font-size: 26px;
  
 }
+.jqhover-ns{
+    width: auto;
+    height: auto;
+  }
 /*轮播图*/
