--- a/css/about.css
+++ b/css/about.css
@@ -6,6 +6,9 @@ src:url('../fonts/BRUSHSCRIPTSTD.OTF');
 	padding: 0;
 	margin: 0;
 }
+a{
+text-decoration: none;
+}
 body{
 	font-family: Arial,"Microsoft YaHei",sans-serif;
 }
@@ -69,6 +72,7 @@ html,body{
 h1{
 	font-size: 6em;
 	font-weight: normal;
+
 }
 p{
 	font-size: 2em;
@@ -109,17 +113,46 @@ p{
 #section1 .single-head{
      height: 200px;
      width: 100%;
-     padding-top: 100px;
-     text-align: center;
+     padding-top: 40px;
+     padding-left: 200px;
+     padding-right: 200px;
+    
 }
 .single-head img{
+	width: 160px;
+	height: 160px;
 
+}
+#section1 .jump{
+	float: right;
+}
+#section1 a{
+	font-family: myFont;
+	font-size: 60px;
+	color: #000;
+	position: relative;
+	top: -100px;
+	text-decoration: none;
+	
+}
+#section1  .intro p{
+	font-size: 22px;
+	line-height: 28px;
+}
+#section1 a:hover{
+	color: #ccc;
+	text-decoration: none;
+}
+#section1 .github-a{
+	position: absolute;
+	top: 200px;
 }
 .single-head p{
 	color: #000;
 }
 /*section2 soFly's introduce*/
 #section2 .single-head{
+
 	width: 100%;
 	text-align: center;
 	padding:80px 200px;
@@ -128,16 +161,20 @@ p{
 #section2 .intro p{
 
 	font-family: myFont;
-	color: #82717c;
+	color: #edd495;
 	text-shadow: 4px;
 }
 
 
 #section2 .single-head img{
 
-	width: 80px;
-	height: 80px;
+	width: 120px;
+	height: 120px;
 
+}
+#section2 .single-head p{
+	color: #fff;
+	text-shadow:  5px 5px 5px #000;
 }
 
 
@@ -146,6 +183,39 @@ p{
 
 
 /*section3 doubi's introduce*/
+/*夏念军的部分*/
+/*section3 doubi's introduce*/
+#section3 p
+{
+    color: #fff;
+}
+#section3 #x1 {
+	width: 1000px;
+	height: 180px;
+}
+#section3 #x2 {
+    -webkit-transition: all 0.5s ease-out;
+    -moz-transition: all 0.5s ease;
+    -o-transition: all 0.5s ease;
+}
+
+#section3 #x2:hover {
+    -webkit-transform: rotate(360deg);
+    -moz-transform: rotate(360deg);
+    -o-transform: rotate(360deg);
+
+}
+#section3 .single-head {
+	text-align: right;
+	padding-right: 20px;
+}
+#section3 .single-head p {
+	margin-right: 50px;
+
+}
+
+
+/*夏念军的部分-end*/
 
 
 
